--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -203,15 +203,6 @@ a {
   }
 }
 
-a.project-page-title {
-  h1 {
-    margin-left: 15px;
-  }
-  &:hover {
-    text-decoration: none;
-  }
-}
-
 
 .mbtablestyle {
         border-collapse: collapse;
@@ -239,6 +230,7 @@ a.project-page-title {
     font-size: 2em;
     margin: 40px 0px 20px;
   }
+  // Used in the Status page
   .current-project {
     border: 1px solid #999;
     text-align: center;
