--- a/_sass/_project-page.scss
+++ b/_sass/_project-page.scss
@@ -9,6 +9,14 @@
     font-size: 18px;
     font-weight: 200;
   }
+  a.project-page-title {
+    h1 {
+      margin-left: 15px;
+    }
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 @media (max-width: 767px) {
