Make lists smaller too

--- a/_sass/_litt-review.scss
+++ b/_sass/_litt-review.scss
@@ -81,6 +81,9 @@
   p, blockquote {
     margin-bottom: 40px;
   }
+  li {
+    font-size: 16px;
+  }
   blockquote p {
     margin-bottom: 0px;
   }
