--- a/_sass/_litt-review.scss
+++ b/_sass/_litt-review.scss
@@ -80,8 +80,10 @@
   margin: 50px auto;
   p, blockquote {
     margin-bottom: 40px;
+    line-height: 1.5;
   }
   li {
+    line-height: 1.5;
     font-size: 16px;
   }
   blockquote p {
