--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -31,7 +31,7 @@
     {% if page.picture %}<meta name="twitter:image" content="https://burntfen.com/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">{% endif %}
 
     <!-- Open Source Protocol -->
-    <link rel="profile" href="http://osprotocol.com" />
+    <link rel="profile" href="https://osprotocol.com" />
     <meta property="os:repo" content="https://github.com/RichardLitt/richardlitt.github.com" />
     <meta property="os:rcs_type" content="git" />
     <meta property="os:src" content="git@github.com:RichardLitt/richardlitt.github.com.git" />
