--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -32,7 +32,7 @@
     <meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">
 
     <!-- Open Source Protocol -->
-    <link rel="profile" href="http://osprotocol.com" />
+    <link rel="profile" href="https://osprotocol.com" />
     <meta property="os:repo" content="https://github.com/RichardLitt/richardlitt.github.com" />
     <meta property="os:rcs_type" content="git" />
     <meta property="os:src" content="git@github.com:RichardLitt/richardlitt.github.com.git" />
