Adding MCCCFAB and The Bridge

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -3,6 +3,7 @@ html,
 body {
   background-color: white;
   height: 100%;
+  font-size: 16px;
   /* The html and body elements cannot have any padding or margin. */
 }
 
