Add in alt tags

--- a/_includes/themes/minimalber/project.html
+++ b/_includes/themes/minimalber/project.html
@@ -5,7 +5,7 @@
 
   <div class="col-sm-4">
     <a href="{{ page.outbound }}">
-      <img class="project-image" src="../../assets/img/project/{{ page.picture }}" />
+      <img class="project-image" alt="{{ page.title }} logo" src="../../assets/img/project/{{ page.picture }}" />
     </a>
   </div>
   <div class="col-sm-8">
@@ -37,7 +37,7 @@
         <div class="project col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 col-md-3">
           <div class="img-container">
             <a href="{{ project.url }}">
-              <img src="../../assets/img/project/{{ project.picture-small }}" class="card-image"/>
+              <img src="../../assets/img/project/{{ project.picture-small }}" alt="{{ project.title }} logo" class="card-image"/>
             </a>
           </div>
           <a class="project-title" href="{{ project.url }}">
