Edit blog format

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -289,3 +289,8 @@ blockquote.latin {
 .header-link-container {
   margin-top: 20px;
 }
+
+.post-divider {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
