Added some new sections to the blog

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -294,3 +294,8 @@ blockquote.latin {
   margin-top: 100px;
   margin-bottom: 50px;
 }
+
+p.p-margin {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
