--- a/_includes/themes/minimalber/post.html
+++ b/_includes/themes/minimalber/post.html
@@ -1,6 +1,6 @@
 
 <div class="col-md-12">
-  <p class="header-link-container"><a href="/">&larr; Go home</a></p>
+  <p class="header-link-container"><a href="/">&larr; Go home</a> :: <a href="{{ BASE_PATH }}/blog">Blog &rarr;</a></p>
   <div class="page-header">
     <h1>{{ page.title }}</h1>
   </div>
@@ -17,7 +17,7 @@
     {% else %}
       <li class="prev disabled"><a>&larr; Previous</a></li>
     {% endif %}
-      <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
+      <li><a href="{{ BASE_PATH }}/blog">Other posts</a></li>
     {% if page.next %}
       <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
     {% endif %}
