--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
     <meta name="copyright" content="&copy; {{ site.author.name }} {{ site.time | date: '%Y' }}">
+    <meta property="og:locale" content="en_US" />
 
     <!-- Security -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https:">
