--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -23,6 +23,7 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="510" />
     <meta property="og:image:height" content="515" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter: card tags -->
     <meta name="twitter:card" content="summary" />
