--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -18,18 +18,11 @@
     <meta property="og:site_name" content="{% if page.layout == 'review' %}The Litt Review{% else %}Burnt Fen{% endif %}" />
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Burnt Fen{% endif %}" />
     <meta property="og:type" content="website" />
-    {% if page.picture %}<meta property="og:image" content="https://burntfen.com/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta property="og:image" content="https://burntfen.com/assets/img/avatar.png" />
+    {% if page.picture %}<meta property="og:image" content="https://burntfen.com/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta property="og:image" content="https://burntfen.com/assets/img/landscape.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="510" />
-    <meta property="og:image:height" content="515" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     {% endif %}
-
-    <!-- Twitter: card tags -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@richlitt" />
-    <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}Burnt Fen{% endif %}">
-    {% if page.description %}<meta property="twitter:description" content="{{ page.description }}" />{% else %}<meta property="twitter:description" content="{{ site.tagline }}" />{% endif %}
-    {% if page.picture %}<meta name="twitter:image" content="https://burntfen.com/assets/img/{% if page.layout %}{{ page.layout }}{% endif %}/{{ page.picture }}">{% else %}<meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">{% endif %}
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
