--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -19,18 +19,11 @@
     <meta property="og:site_name" content="Richard Littauer" />
     <meta property="og:title" content="Richard Littauer" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://burntfen.com/assets/img/avatar.png" />
+    <meta property="og:image" content="https://burntfen.com/assets/img/landscape.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="510" />
-    <meta property="og:image:height" content="515" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="en_US" />
-
-    <!-- Twitter: card tags -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@richlitt" />
-    <meta name="twitter:title" content="Richard Littauer">
-    <meta name="twitter:description" content="{{ page.tagline }}">
-    <meta name="twitter:image" content="https://burntfen.com/assets/img/avatar.png">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
