Revamp to add conlang page

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -295,11 +295,25 @@ blockquote.latin {
   margin-bottom: 50px;
 }
 
-p.p-margin {
-  margin-top: 20px;
-  margin-bottom: 20px;
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
 }
 
-.social-media {
-  
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
+
+.conlanger {
+  padding-left: 0px;
+  max-width: 80%;
+}
+
