Include link to alpacas

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
   <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
+  {% if page.homepage %}<p>If you are looking for alpacas, you should be at <a href="https://www.burntfen.co.uk/">burntfen.co.uk</a>. <a href="https://www.burntfen.com/2025-10-23/visiting-burnt-fen">What?</a></p>{% endif %}
   <p>{{ site.author.name }} &copy; {{ site.time | date: '%Y' }}.
     <a href="https://github.com/RichardLitt/richardlitt.github.com">Website Code <i class="fa fa-github"></i></a>.
   </p>
